--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 p {
   
-	@apply text-zinc-800 text-lg dark:text-zinc-300;
+	@apply text-zinc-800 text-lg dark:text-zinc-300 mb-5;
 
 }
 h1 {
@@ -10,7 +10,7 @@ h1 {
 }
 ol {
   
-	@apply list-decimal pl-5 mt-2.5 text-lg dark:text-zinc-300;
+	@apply list-decimal pl-5 text-lg dark:text-zinc-300 mb-5;
 
 }
 li {
