--- a/src/pages/ideas/[slug].astro
+++ b/src/pages/ideas/[slug].astro
@@ -13,6 +13,7 @@ export async function getStaticPaths() {
 
 const { entry } = Astro.props;
 const { Content } = await entry.render();
+import { format } from "date-fns"
 import "../../styles/global.css"
 ---
 <html lang="en">
@@ -20,14 +21,19 @@ import "../../styles/global.css"
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
+		<meta name="generator" content={ Astro.generator } />
 		<title>Mohit.dev</title>
 	</head>
 	<body>
 		<div class="bg-slate-200 dark:bg-slate-800 w-screen h-full">
 			<div class="container mx-auto px-5 lg:px-0 lg:max-w-4xl min-h-screen">
-				<h1 class="font-bold">Mohit.dev</h1>
-				<Content/>
+				<h1 class="font-semibold text-zinc-800 text-3xl dark:text-zinc-300">{ entry.data.title }</h1>
+				<div class="mt-2.5">
+					<div class="text-xs text-zinc-800 dark:text-zinc-300">{ format( new Date( entry.data.date ), "do MMMM yyyy" )  }</div>
+				</div>
+				<div class="mt-5">
+					<Content/>
+				</div>
 			</div>
 		</div>
 	</body>
