--- a/src/pages/fundamentals/[slug].astro
+++ b/src/pages/fundamentals/[slug].astro
@@ -22,7 +22,7 @@ import "../../styles/global.css"
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={ Astro.generator } />
-		<title>Mohit.dev</title>
+		<title>Fundamentals - { entry.data.title } | Mohit.dev</title>
 	</head>
 	<body>
 		<div class="bg-slate-200 dark:bg-slate-800 w-screen h-full">
