--- a/src/pages/fundamentals/[slug].astro
+++ b/src/pages/fundamentals/[slug].astro
@@ -16,6 +16,7 @@ const { Content } = await entry.render();
 import { format } from "date-fns"
 import "../../styles/global.css"
 import Footer from "../../components/Footer.astro"
+import Header from "../../components/Header.astro"
 ---
 <html lang="en">
 	<head>
@@ -27,7 +28,8 @@ import Footer from "../../components/Footer.astro"
 	</head>
 	<body>
 		<div class="bg-slate-200 dark:bg-slate-800 w-screen h-full">
-			<div class="container mx-auto px-5 lg:px-0 lg:max-w-4xl min-h-screen">
+			<Header />
+			<div class="container mx-auto px-5 lg:px-0 lg:max-w-4xl min-h-screen mt-5">
 				<h1 class="font-semibold text-zinc-800 text-3xl dark:text-zinc-300">{ entry.data.title }</h1>
 				<div class="mt-2.5">
 					<div class="text-xs text-zinc-800 dark:text-zinc-300">{ format( new Date( entry.data.date ), "do MMMM yyyy" )  }</div>
