--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 import { Content as AboutContent } from '../content/home/about.md';
 import { Content as SocialMediaContent } from '../content/home/social-media.md';
 import "../styles/global.css"
+import Footer from "../components/Footer.astro"
+import Header from "../components/Header.astro"
 ---
 
 <html lang="en">
@@ -14,8 +16,8 @@ import "../styles/global.css"
 	</head>
 	<body>
 		<div class="bg-slate-200 dark:bg-slate-800 w-screen h-full">
+			<Header />
 			<div class="container mx-auto px-5 lg:px-0 lg:max-w-4xl min-h-screen">
-				<h1 class="font-bold">Mohit.dev</h1>
 				<div class="mt-5">
 					<AboutContent/>
 				</div>
@@ -23,6 +25,7 @@ import "../styles/global.css"
 					<SocialMediaContent/>
 				</div>
 			</div>
+			<Footer/>
 		</div>
 	</body>
 </html>
