--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,11 @@
 <div class="bg-slate-200 dark:bg-slate-800">
     <div class="container mx-auto max-w-3xl h-full flex justify-center py-5 items-center flex-col">
         <div class="flex gap-5">
+            <a href="/fundamentals" class="text-xs text-zinc-800">Fundamentals</a>
+            <a href="/health" class="text-xs text-zinc-800">Health</a>
+            <a href="/wealth" class="text-xs text-zinc-800">Wealth</a>
+        </div>
+        <div class="flex gap-5 mt-5">
             <div class="h-8 w-8 relative">
                 <a href="https://twitter.com/mohitdotdev" target="_blank">
                     <img
