feat: new sections

--- a/src/pages/health/[slug].astro
+++ b/src/pages/health/[slug].astro
@@ -38,7 +38,7 @@ import Header from "../../components/Header.astro"
 					<Content/>
 				</div>
 				<div class="mt-5">
-					<div class="italic">If you have anything to say or add, please message/mention me on <a href="https://twitter.com/mohitdotdev" target="_blank">twitter</a> or <a href="mailto:hey@mohit.dev" target="_blank">email</a> me.</div>
+					<div class="italic">If you have anything to say or add, please mention me on <a href="https://twitter.com/mohitdotdev" target="_blank">twitter</a> or <a href="mailto:hey@mohit.dev" target="_blank">email</a> me. Managing comments is another task and I do not wish to involve third party softwares.</div>
 				</div>
 			</div>
 			<Footer />
