--- a/src/pages/wealth/[slug].astro
+++ b/src/pages/wealth/[slug].astro
@@ -2,7 +2,7 @@
 import { getCollection } from 'astro:content';
 export async function getStaticPaths() {
   
-	const blogEntries = await getCollection('fundamentals');
+	const blogEntries = await getCollection('wealth');
   	return blogEntries.map(entry => ({
     	
 		params: { slug: entry.slug }, props: { entry },
@@ -22,9 +22,28 @@ import Header from "../../components/Header.astro"
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.ico" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="generator" content={ Astro.generator } />
-		<title>Fundamentals - { entry.data.title } | Mohit.dev</title>
+		
+		<!-- Primary Meta Tags -->
+		<title>Wealth - { entry.data.title } | Mohit.dev</title>
+		<meta name="title" content={ "Wealth - " + entry.data.title +" | Mohit.dev" }/>
+		<meta name="description" content={ entry.data.description }/>
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="article">
+		<meta property="og:url" content="https://mohit.dev/fundamentals/priority-in-life/">
+		<meta property="og:title" content={ "Wealth - " + entry.data.title +" | Mohit.dev" }>
+		<meta property="og:description" content={ entry.data.description }>
+		<meta property="og:image" content={ entry.data.image }>
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://mohit.dev/fundamentals/priority-in-life/">
+		<meta property="twitter:title" content={ "Wealth - " + entry.data.title +" | Mohit.dev" }>
+		<meta property="twitter:description" content={ entry.data.description }>
+		<meta property="twitter:image" content={ entry.data.image }>
+
 	</head>
 	<body>
 		<div class="bg-slate-200 dark:bg-slate-800 w-screen h-full">
@@ -42,7 +61,10 @@ import Header from "../../components/Header.astro"
 					<div class="text-xs text-zinc-800 dark:text-zinc-300">{ format( new Date( entry.data.update_date ), "do MMMM yyyy" )  }</div>
 				</div>
 				<div class="mt-5">
-					<div class="italic">If you have anything to say or add, please mention me on <a href="https://twitter.com/mohitdotdev" target="_blank">twitter</a> or <a href="mailto:hey@mohit.dev" target="_blank">email</a> me. Managing comments is another task and I do not wish to involve third party softwares.</div>
+					<div class="text-zinc-800 dark:text-zinc-300 font-light">Disclaimer: None of this is a financial advice but my personal opinion. Please do your own research before making any financial decision.</div>
+				</div>
+				<div class="mt-5">
+					<div class="text-zinc-800 dark:text-zinc-300">If you have anything to say or add, please message/mention me on <a href="https://twitter.com/mohitdotdev" target="_blank">twitter</a> or <a href="mailto:hey@mohit.dev" target="_blank">email</a> me.</div>
 				</div>
 			</div>
 			<Footer />
