--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,6 +22,14 @@
                     />
                 </a>
             </div>
+            <div class="h-8 w-8 relative">
+                <a href="https://t.me/almanacofmohit" target="_blank">
+                    <img
+                        src="/telegram.svg"
+                        alt="telegram_icon"
+                    />
+                </a>
+            </div>
         </div>
         <div class="mt-5 text-center">
             <p class="text-sm text-slate-500 dark:text-slate-300 mb-0">Mohit Tyagi</p>
