--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,6 +4,7 @@
             <a href="/fundamentals" class="text-xs text-zinc-800 dark:text-zinc-300">Fundamentals</a>
             <a href="/health" class="text-xs text-zinc-800 dark:text-zinc-300">Health</a>
             <a href="/wealth" class="text-xs text-zinc-800 dark:text-zinc-300">Wealth</a>
+            <a href="/fullstack-india" class="text-xs text-zinc-800 dark:text-zinc-300">Full Stack India</a>
         </div>
         <div class="flex gap-5 mt-5">
             <div class="h-8 w-8 relative">
