--- a/src/pages/fundamentals/[slug].astro
+++ b/src/pages/fundamentals/[slug].astro
@@ -1,10 +1,10 @@
 ---
 import { getCollection } from 'astro:content';
 export async function getStaticPaths() {
-  
+
 	const blogEntries = await getCollection('fundamentals');
   	return blogEntries.map(entry => ({
-    	
+
 		params: { slug: entry.slug }, props: { entry },
 
   	}))
@@ -27,7 +27,7 @@ import Header from "../../components/Header.astro"
 		<title>Fundamentals - { entry.data.title } | Mohit.dev</title>
 	</head>
 	<body>
-		<div class="bg-slate-200 dark:bg-slate-800 w-screen h-full">
+		<div class="bg-slate-200 dark:bg-slate-800 w-screen min-h-screen">
 			<Header />
 			<div class="container mx-auto px-5 lg:px-0 lg:max-w-4xl my-5">
 				<h1 class="font-semibold text-zinc-800 text-3xl dark:text-zinc-300">{ entry.data.title }</h1>
@@ -47,6 +47,6 @@ import Header from "../../components/Header.astro"
 			</div>
 			<Footer />
 		</div>
-		
+
 	</body>
 </html>
