--- a/src/pages/wealth/index.astro
+++ b/src/pages/wealth/index.astro
@@ -14,7 +14,7 @@ import Header from "../../components/Header.astro"
 		<title>Wealth | Mohit.dev</title>
 	</head>
 	<body>
-		<div class="bg-slate-200 dark:bg-slate-800 w-screen h-full">
+		<div class="bg-slate-200 dark:bg-slate-800 w-screen min-h-screen">
 			<Header/>
 			<div class="container mx-auto px-5 lg:px-0 lg:max-w-4xl my-10">
 				<h1>Wealth</h1>
@@ -25,7 +25,7 @@ import Header from "../../components/Header.astro"
 						{
 
 							posts.map( ( post ) => {
-								
+
 								return (
 									<li>
 										<div>
