--- a/src/pages/fullstack-india/index.astro
+++ b/src/pages/fullstack-india/index.astro
@@ -1,6 +1,5 @@
 ---
-import { getCollection, getEntryBySlug } from 'astro:content';
-const posts = await getCollection('fundamentals');
+import { Content as AboutContent } from '../../content/fullstack-india/about.md';
 import "../../styles/global.css"
 import Footer from "../../components/Footer.astro"
 import Header from "../../components/Header.astro"
@@ -11,46 +10,15 @@ import Header from "../../components/Header.astro"
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Fundamentals | Mohit.dev</title>
+		<title>Full Stack India | Mohit.dev</title>
 	</head>
 	<body>
-		<div class="bg-slate-200 dark:bg-slate-800 w-screen h-full">
+		<div class="bg-slate-200 dark:bg-slate-800 w-screen min-h-screen">
 			<Header/>
 			<div class="container mx-auto px-5 lg:px-0 lg:max-w-4xl my-10">
-				<h1>Fundamentals</h1>
-				{
-
-					posts.length > 0 &&
-					<ol>
-						{
-
-							posts.map( ( post ) => {
-
-								return (
-									<li>
-										<div>
-											<a href={ "/fundamentals/" + post.data.url }>
-												<div>{ post.data.title }</div>
-											</a>
-											<div class="mt-2.5">
-												<div class="text-base text-zinc-800">{ post.data.description }</div>
-											</div>
-										</div>
-									</li>
-								)
-
-							})
-
-						}
-					</ol>
-
-				}
-				{
-
-					posts.length === 0 &&
-					<div class="italic">no posts</div>
-
-				}
+				<div class="mt-5">
+					<AboutContent/>
+				</div>
 			</div>
 			<Footer/>
 		</div>
