--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,30 +1,30 @@
 p {
-  
-	@apply text-zinc-800 text-lg dark:text-zinc-300 mb-5;
+
+	@apply text-zinc-800 text-lg dark:text-zinc-300 mb-2;
 
 }
 h1 {
-  
-	@apply font-semibold text-zinc-800 text-xl dark:text-zinc-300;
+
+	@apply font-semibold text-zinc-800 text-xl dark:text-zinc-300 pb-2;
 
 }
 ol {
-  
-	@apply list-decimal pl-5 text-lg dark:text-zinc-300 mb-5;
+
+	@apply list-decimal pl-10 text-lg dark:text-zinc-300 mb-2;
 
 }
 ul {
 
-	@apply list-disc pl-5 text-lg dark:text-zinc-300 mb-5;
+	@apply list-disc pl-5 text-lg dark:text-zinc-300 mb-2;
 
 }
 li {
-  
-	@apply text-lg text-zinc-800 dark:text-zinc-300 pt-2.5;
+
+	@apply text-lg text-zinc-800 dark:text-zinc-300 pt-2;
 
 }
 a {
-  
+
 	@apply underline text-lg text-zinc-800 dark:text-zinc-300 cursor-pointer underline-offset-4;
 
 }
