--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 p {
 
-	@apply text-zinc-800 text-lg dark:text-zinc-300 mb-2;
+	@apply text-zinc-800 text-base dark:text-zinc-300 mb-2 md:text-base md:text-lg;
 
 }
 h1 {
@@ -10,22 +10,22 @@ h1 {
 }
 ol {
 
-	@apply list-decimal pl-10 text-lg dark:text-zinc-300 mb-2;
+	@apply list-decimal pl-10 text-base md:text-lg dark:text-zinc-300 mb-2;
 
 }
 ul {
 
-	@apply list-disc pl-5 text-lg dark:text-zinc-300 mb-2;
+	@apply list-disc pl-5 text-base md:text-lg dark:text-zinc-300 mb-2;
 
 }
 li {
 
-	@apply text-lg text-zinc-800 dark:text-zinc-300 pt-2;
+	@apply text-base md:text-lg text-zinc-800 dark:text-zinc-300 pt-2;
 
 }
 a {
 
-	@apply underline text-lg text-zinc-800 dark:text-zinc-300 cursor-pointer underline-offset-4;
+	@apply underline text-base md:text-lg text-zinc-800 dark:text-zinc-300 cursor-pointer underline-offset-4;
 
 }
 .no-paragraph-margin p{
