--- a/src/pages/fullstack-india/tailwind/animation.astro
+++ b/src/pages/fullstack-india/tailwind/animation.astro
@@ -4,12 +4,12 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Tailwind | Mohit.dev</title>
+		<title>FullStack India - Tailwind - Animation | Mohit.dev</title>
 	</head>
 	<body>
 		<div class="bg-slate-200 w-screen h-screen">
 			<div class="container mx-auto">
-				<h1 class="text-2xl font-semibold">Hydrogen</h1>
+				<h1 class="text-2xl font-semibold">Animation</h1>
 				<div class="flex group gap-5 mt-10">
 					<div class="bg-zinc-400 h-96 w-1/3 rounded overflow-hidden group-hover:w-1/4 group-hover:hover:!w-1/2 cursor-pointer transition-width ease-in duration-300 relative">
 						<img
