--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,12 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-90J0SNHXVV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-90J0SNHXVV');
+</script>
 <div class="bg-slate-50 dark:bg-slate-800 h-16 border-b border-b-slate-300 dark:border-b-slate-900 dark:shadow-md">
     <div class="max-w-4xl container mx-auto h-full flex items-center justify-between px-5 md:p-0">
         <a href="/" class="no-underline">
