--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <div class="bg-slate-200 dark:bg-slate-800">
     <div class="container mx-auto max-w-3xl h-full flex justify-center py-5 items-center flex-col">
-        <div class="flex gap-5">
+        <div class="flex gap-5 flex-wrap justify-center">
             <a href="/fundamentals" class="text-xs text-zinc-800 dark:text-zinc-300">Fundamentals</a>
             <a href="/health" class="text-xs text-zinc-800 dark:text-zinc-300">Health</a>
             <a href="/wealth" class="text-xs text-zinc-800 dark:text-zinc-300">Wealth</a>
