--- a/src/pages/thoughts/index.astro
+++ b/src/pages/thoughts/index.astro
@@ -33,7 +33,7 @@ import Header from "../../components/Header.astro"
 												<div>{ post.data.title }</div>
 											</a>
 											<div class="mt-2.5">
-												<div class="text-base text-zinc-800">{ post.data.description }</div>
+												<div class="text-base text-zinc-800 dark:text-zinc-300">{ post.data.description }</div>
 											</div>
 										</div>
 									</li>
