--- a/src/layouts/Layouts/index.astro
+++ b/src/layouts/Layouts/index.astro
@@ -1,4 +1,5 @@
 ---
+import "@/styles/global.css"
 const { title, description } = Astro.props
 ---
 <html lang="en">
@@ -18,7 +19,7 @@ const { title, description } = Astro.props
             gtag('config', 'G-90J0SNHXVV');
         </script>
 	</head>
-	<body>
+	<body class="bg-zinc-100">
         <slot/>
     </body>
 </html>
