--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,7 +40,7 @@ a {
 }
 pre {
 
-	@apply bg-zinc-700 p-4 text-sm;
+	@apply bg-zinc-700 p-4 text-sm rounded;
 
 }
 
@@ -51,7 +51,8 @@ h3 a {
 }
 code {
 
-	@apply text-sm;
+	@apply text-sm rounded;
+
 }
 .no-paragraph-margin p{
 
