--- a/src/pages/[slug]/index.astro
+++ b/src/pages/[slug]/index.astro
@@ -13,7 +13,7 @@ export async function getStaticPaths() {
 
 const coursesEntries = await getCollection("courses");
 
-console.log( coursesEntries )
+// console.log( coursesEntries )
 
 const { entry } = Astro.props;
 // console.log("we are here", entry)
