--- a/src/pages/course/[slug]/index.astro
+++ b/src/pages/course/[slug]/index.astro
@@ -19,15 +19,15 @@ const { entry } = Astro.props;
 // GET DATA FROM COURSE
 const courseEntries = await getCollection( entry.slug );
 
-console.log( courseEntries )
+// console.log( courseEntries )
 
 // LAYOUTS
-import Container from "@/layouts/Container/index.astro"
-import Layout from "@/layouts/Layouts/index.astro"
+import Container from "@/layouts/container/index.astro"
+import Layout from "@/layouts/layout/index.astro"
 
 // COMPONENTS
-import Header from "@/components/Header.astro"
-import Footer from "@/components/Footer.astro"
+import Header from "@/components/common/header/index.astro"
+import Footer from "@/components/common/footer/index.astro"
 
 // BODY
 const data_body = []
